# simple-1997-lstm-reproduction

./: .gitignore  LICENSE  README.md  aquarius.project.json  pyproject.toml
.aquarius/: README.md
.aquarius/results/: sequence-modeling-benchmark.json
assets/animations/: 01_cec_tunnel.py  02_gate_mechanisms.py  03_gradient_accumulation.py  04_rnn_unrolling.py  05_adding_problem.py  06_vanishing_gradient.py  07_bptt_complexity.py  08_reber_grammar.py  09_long_time_lag.py  10_two_sequence.py  11_multiplication.py  12_temporal_order.py  colors.py
configs/: adding_T100.yaml  adding_T1000.yaml  adding_T500.yaml  long_lag_2a.yaml  long_lag_2b.yaml  long_lag_2c.yaml  multiplication.yaml  paper_defaults.yaml  reber.yaml  temporal_order_2.yaml  temporal_order_3.yaml  two_sequence_3a.yaml  two_sequence_3b.yaml  two_sequence_3c.yaml
docs/: ARCHITECTURE.md  DEBUG_LOG_2026-01-03.md  EQUATIONS.md  EXPERIMENTS.md  TESTING.md
experiments/: __init__.py  adding.py  long_lag.py  multiplication.py  reber.py  run_all.py  temporal_order.py  two_sequence.py
notebooks/: LSTM_Tinygrad_implimentation.ipynb
notebooks/Experiment Results/: Addition-Problem.ipynb  NoisySequence-numpy.ipynb  ReberGrammar-numpy.ipynb  TwoSequence-numpy.ipynb
src/aquarius_lstm/: __init__.py  activations.py  block.py  cell.py  cell_torch.py  initialization.py  metrics.py
src/numpyLSTM/: MewralLSTM.py  StandardRNN.py  layers.py  math_helpers.py  optimizer.py
tests/: __init__.py  test_activations.py  test_cec_gradient.py  test_experiments_smoke.py  test_forward_shapes.py
